# shepherd-launcher

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  config.example.toml  run-dev  setup-cgroups.sh  sway.conf
.github/workflows/: ci.yml
crates/shepherd-api/: Cargo.toml  README.md
crates/shepherd-api/src/: commands.rs  events.rs  lib.rs  types.rs
crates/shepherd-config/: Cargo.toml  README.md
crates/shepherd-config/src/: lib.rs  policy.rs  schema.rs  validation.rs
crates/shepherd-core/: Cargo.toml  README.md
crates/shepherd-core/src/: engine.rs  events.rs  lib.rs  session.rs
crates/shepherd-host-api/: Cargo.toml  README.md
crates/shepherd-host-api/src/: capabilities.rs  handle.rs  lib.rs  mock.rs  traits.rs  volume.rs
crates/shepherd-host-linux/: Cargo.toml  README.md
crates/shepherd-host-linux/src/: adapter.rs  connectivity.rs  lib.rs  process.rs  volume.rs
crates/shepherd-hud/: Cargo.toml  README.md
crates/shepherd-hud/src/: app.rs  battery.rs  main.rs  state.rs  time_display.rs  volume.rs
crates/shepherd-ipc/: Cargo.toml  README.md
crates/shepherd-ipc/src/: client.rs  lib.rs  server.rs
crates/shepherd-launcher-ui/: Cargo.toml  README.md
crates/shepherd-launcher-ui/src/: app.rs  client.rs  grid.rs  input.rs  main.rs  state.rs  tile.rs
crates/shepherd-store/: Cargo.toml  README.md
crates/shepherd-store/src/: audit.rs  lib.rs  sqlite.rs  traits.rs
crates/shepherd-util/: Cargo.toml  README.md
crates/shepherd-util/src/: error.rs  ids.rs  lib.rs  paths.rs  rate_limit.rs  time.rs
crates/shepherdd/: Cargo.toml  README.md
crates/shepherdd/src/: main.rs
crates/shepherdd/tests/: integration.rs
docs/: INSTALL.md
docs/ai/history/: 2025-12-26 001 initial shepherdd.md  2025-12-26 002 initial ui.md  2025-12-31 001 scripts.md
docs/readme/: basic-flow.webm  tuxmath-expiring.webm
scripts/: README.md  admin  dev  shepherd
scripts/lib/: build.sh  common.sh  config.sh  deps.sh  harden.sh  install.sh  sway.sh
src/: clock.rs  main.rs
src/daemon/: PROCESS_SPAWN_API.md  README.md  daemon.rs  ipc.rs  mod.rs
src/ui/: mod.rs  ui.rs
