[workspace]
resolver = "2"
members = [
    "crates/shepherd-util",
    "crates/shepherd-api",
    "crates/shepherd-host-api",
    "crates/shepherd-config",
    "crates/shepherd-store",
    "crates/shepherd-core",
    "crates/shepherd-host-linux",
    "crates/shepherd-ipc",
    "crates/shepherdd",
    "crates/shepherd-launcher-ui",
    "crates/shepherd-hud",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Albert Armea"]
repository = "https://github.com/aarmea/shepherd-launcher"

[workspace.dependencies]
# Internal crates
shepherd-util = { path = "crates/shepherd-util" }
shepherd-api = { path = "crates/shepherd-api" }
shepherd-host-api = { path = "crates/shepherd-host-api" }
shepherd-config = { path = "crates/shepherd-config" }
shepherd-store = { path = "crates/shepherd-store" }
shepherd-core = { path = "crates/shepherd-core" }
shepherd-host-linux = { path = "crates/shepherd-host-linux" }
shepherd-ipc = { path = "crates/shepherd-ipc" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full", "signal"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bitflags = "2.4"

# Unix-specific
nix = { version = "0.29", features = ["signal", "process", "user", "socket"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# GTK4 UI
gtk4 = "0.9"
gtk4-layer-shell = "0.4"

# Testing
tempfile = "3.9"
