[package]
name = "shepherd-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol types for shepherdd IPC: commands, events, versioning"

[dependencies]
shepherd-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
