[package]
name = "shepherd-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration parsing and validation for shepherdd"

[[bin]]
name = "validate-config"
path = "src/bin/validate-config.rs"

[dependencies]
shepherd-util = { workspace = true }
shepherd-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
