[package]
name = "shepherd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core policy engine and session state machine for shepherdd"

[dependencies]
shepherd-util = { workspace = true }
shepherd-api = { workspace = true }
shepherd-config = { workspace = true }
shepherd-store = { workspace = true }
shepherd-host-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
