[package]
name = "shepherd-host-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux host adapter for shepherdd: process groups, spawn/kill, exit observation"

[dependencies]
shepherd-util = { workspace = true }
shepherd-api = { workspace = true }
shepherd-host-api = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
async-trait = "0.1"
dirs = "5.0"
shell-escape = "0.1"
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
netlink-sys = "0.8"
netlink-packet-core = "0.7"
netlink-packet-route = "0.21"

[dev-dependencies]
tempfile = { workspace = true }
