[package]
name = "shepherd-launcher-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GTK4 launcher UI for shepherdd - main grid interface"

[[bin]]
name = "shepherd-launcher"
path = "src/main.rs"

[dependencies]
shepherd-api = { workspace = true }
shepherd-ipc = { workspace = true }
shepherd-util = { workspace = true }

gtk4 = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
gilrs = { workspace = true }

[features]
default = []
