[package]
name = "shepherd-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistence layer for shepherdd: audit log, usage accounting, cooldowns"

[dependencies]
shepherd-util = { workspace = true }
shepherd-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
