[package]
name = "shepherd-util"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared utilities for shepherdd: time, IDs, error types, rate limiting"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
